Update index.html with new content

--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
       max-width:250px;
       border-radius:12px;
       box-shadow:0 4px 8px rgba(0,0,0,0.2);
+      background:#fff;
     }
   </style>
 </head>
 <body>
   <h1>În Belcești ai ce-ți dorești 🐔</h1>
   <div class="gallery">
-    <img src="https://media.giphy.com/media/xT0xeJpnrWC4XWblEk/giphy.gif" alt="Găină gif">
-    <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" alt="Găină dans gif">
-    <img src="https://media.giphy.com/media/l3vR85PnGsBwu1PFK/giphy.gif" alt="Pui dans gif">
-    <img src="https://media.giphy.com/media/3o6ZsX2QhF1Tx0qGDe/giphy.gif" alt="Găină comică gif">
+    <img src="https://media.tenor.com/8Z1QF2Q8e44AAAAd/chicken-dance.gif" alt="Găină dansatoare">
+    <img src="https://media.tenor.com/2v3k1G9fRrEAAAAC/chicken.gif" alt="Găină animată">
+    <img src="https://media.tenor.com/NmRrQ3w4r9kAAAAC/chicken-walk.gif" alt="Găină merge">
+    <img src="https://media.tenor.com/0JvZbLZyJwYAAAAC/funny-chickens-dance.gif" alt="Găini dansează">
   </div>
 </body>
 </html>
