--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 </head>
 <body>
   <h1>În Belcești ai ce-ți dorești 🐔</h1>
+  <p>Una mie una tie, carnea e in farfurie, Phasola rabda de foame, eu bag Foie gras de foame</p>
   <div class="gallery">
     <img src="https://media.tenor.com/8Z1QF2Q8e44AAAAd/chicken-dance.gif" alt="Găină dansatoare">
     <img src="https://media.tenor.com/2v3k1G9fRrEAAAAC/chicken.gif" alt="Găină animată">
